--- a/website/Personal Portfolio.html
+++ b/website/Personal Portfolio.html
@@ -1,31 +1,170 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en-US" dir="ltr">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samantha's Work Portfolio</title>
+    <link rel="stylesheet" href="css stylesheet_ind.css">
 </head>
    
-   
+ 
 <body>
     <nav role = "navigation" aria - aria-label="main menu">
-        <ul class="navbar">
-            <li><a href="/">Home</a></li>
-            <li><a href="/">People</a></li>
-            <li><a href="/">Prices</a></li>
-            <li><a href="/">Contact</a></li>
+      <font face="Comic sans MS" size="4">
+        <div class-="navbar">
+        <ul>
+          <li><a href="#contact">CONTACT INFORMATION</a></li>
+          <li><a href="#project">PROJECTS</a></li>
+          <li><a href="#skill">SKILLS</a></li>
+          <li><a href="#about">ABOUT ME</a></li>
+          <li><a href="#home">HOME</a></li>
         </ul>
+      </div>
     </nav>
+    <div id="home">
+    </div>
     
-    <h1>About Me</h1>
+    <section> 
+        <p><h3><em><b>!!Come and Check out Samantha's Portfolio!! </em></b></h3></p>
+      <div class="home-pic">
+        <img src="../images/book.avif" 
+        alt="sam_pic" 
+        width="600" height="370"
+        srcset="/images/book.avif 2x,
+        /images/book.avif 3x,
+        /images/book.avif 4x">
+      </div>
+    </section>
+
+    <section>
+      <center> <h2 id="about">ABOUT ME</h2></center>
+   <font face="Comic sans MS" size="4">
+  
     <p1>
         <p1>Samantha Calvert is a passionate researcher with a curious mindset. Having worked in both academia and government, she displays professionalism in her day-to-day life.
         <br> Some of her strongest skills are monitoring and evaluating projects, research, analysis, attention to detail, teamwork, relationship-building, report and research writing.
         <br> She would like to assist organizations to be successful and for its clients to be delighted with the service received as well as to establish long-standing partnerships.
         <br> She is currently pursuing data analysis to become more proficient with analysing data and information.</p1> 
+        <br>
+    </section>
+    <br>
 
+<section>
+  <center> <h2 id="skill">SKILLS</h2></center>
+<font face="Comic sans MS" size="4">
+  <p>Samantha has learnt through perseverance and faith that anything is possible. 
+    Without a degree in technology, she has taken on the challenge to grow her tech skills to achieve her data science career.
+    The following are her main areas of learning notwithstanding her interest in learning more technologies.</p>
+  <br>
+    <aside>
+      <p>The Epcot center is a theme park at Walt Disney World Resort featuring exciting attractions, 
+        international pavilions, award-winning fireworks and seasonal special events.</p>
+      </aside
+<h3><u>TECH STACK</u></h3>
+
+<table>
+    <tr>
+      <th>SKILL</th>
+      <th>PROFICIENCY</th>
+      <th>USED WHERE</th>
+    </tr>
+    <tr>
+      <td>HTML</td>
+      <td>Basic</td>
+      <td>Website & Portfolio Development</td>
+    </tr>
+    <tr>
+      <td>Python</td>
+      <td>Basic</td>
+      <td>Program applications</td>
+    </tr>
+    <tr>
+      <td>Java</td>
+      <td>Basic</td>
+      <td>Website & Portfolio Development</td>
+    </tr>
+    <tr>
+      <td>JavaScript</td>
+      <td>Basic</td>
+      <td>Website & Portfolio Development</td>
+    </tr>
+    <tr>
+      <td>SQL</td>
+      <td>Basic</td>
+      <td>Data Science</td>
+    </tr>
+  </table>
+</section>
+
+<section>
+  <center> <h2 id="project">PROJECTS</h2></center>
+  <font face="Comic sans MS" size="4">
+    <p>Peruse Samantha's projects below.</p>
+</section>
+
+<section>
+  <div class="contact">
+  <center> <h2 id="contact">CONTACT INFORMATION</h2></center>
+  </div>
+   
+</section>
+
+
+<section>         
+<font face="Comic sans MS" size="4">
+<h3><i>Let's get in touch!</i></h3>
+
+<div class="content-form">
+  
+  <form action="" method="post">
+      <div class="form">
+      <div class="input-box">
+            <label for="fname">First Name: </label>
+              <input type="text" id="fname" placeholder="Your name.." required>
+      </div>
+          <br>
+      <div class="input-box">
+            <label for="lname">Last Name: </label>
+              <input type="text" id="lname" placeholder="Your last name.." required>
+      </div>
+          <br>
+      <div class="input-box">
+            <label for="email">Email address: </label>
+              <input type="email" id="email" required placeholder="example@gmail.com">
+      </div>
+          <br>
+      <div class="input-box">
+            <label for="phone">Cellphone Number: </label>
+              <input type="tel" id="phone" placeholder="072-456-7890" required>
+      </div>
+         <br>
+      <div class="text-box">
+            <label for="comment"> Leave a message:</label><br>
+              <textarea id="comment" name="comment" rows="10" cols="50"></textarea>
+      </div>
+      
+      <div class="button">
+              <input type="submit" onclick="alert('Thank you for filling out the form. I will respond to you shortly.')">
+              <button type="reset">Reset</button>
+      </div>
+      </div>
+  </form>  
+</section>
+
+<footer>
+  <div class="footer-links"></div>
+    <a href="mailto:samanthajune9.calvert@gmail.com" target="_blank"><img src="../images/email.jfif" alt="Email icon" width="40px" height="50px"></a>
+    <div class="footer-links"></div>
+    <a href="https://github.com/Samantha-June?tab=repositories" target="_blank">
+    <img src="../images/git.jfif" alt="Github icon" width="40px" height="50px"></a>
+    <div class="footer-links"></div>
+    <a href="https://www.linkedin.com/in/samanthaj-calvert/?originalSubdomain=za/" target="_blank"><img src="../images/Link" alt="LinkedIn icon" width="41px" height="51px"></a>
+  <div>
+    <p>© 2024 Samantha The Software Developer & Data Scientist</p>
+  </div>
+</footer>
 
 </body>
-
 
 </html>
