--- a/website/Personal Portfolio.html
+++ b/website/Personal Portfolio.html
@@ -12,37 +12,45 @@
 <body>
     <nav role = "navigation" aria - aria-label="main menu">
       <font face="Comic sans MS" size="4">
-        <div class-="navbar">
+
+        <div class="navbar">
         <ul>
-          <li><a href="#contact">CONTACT INFORMATION</a></li>
-          <li><a href="#project">PROJECTS</a></li>
+          <li><a href="#contact">CONTACT</a></li>
           <li><a href="#skill">SKILLS</a></li>
+          <li><a href="#work">WORK EXPERIENCE</a></li>
           <li><a href="#about">ABOUT ME</a></li>
           <li><a href="#home">HOME</a></li>
+          <li><a class="my-name">Samantha Calvert</a></li>
+        </div> 
         </ul>
-      </div>
     </nav>
     <div id="home">
     </div>
-    
+   
     <section> 
-        <p><h3><em><b>!!Come and Check out Samantha's Portfolio!! </em></b></h3></p>
-      <div class="home-pic">
-        <img src="../images/book.avif" 
+        <p><h3><em><b>!!Come and Check out Samantha Calvert's career journey!! I have a diverse skillset from working in different industries. Hopefully my portfolio will pinpoint my unique offering and convince you to welcome me to your team!! </em></b></h3></p>
+   
+        <div class="home-pic">
+      <img src="../images/book.avif" 
         alt="sam_pic" 
         width="600" height="370"
         srcset="/images/book.avif 2x,
         /images/book.avif 3x,
         /images/book.avif 4x">
+
+        <p class="p-home">
+          Software Developer & Data Scientist</p>
+        <h3><em><b>Let's go...</b></em></h3>
+        <span class="arrow">&#8595; &#8595; &#8595; &#8595;</span>
       </div>
-    </section>
+       
 
     <section>
-      <center> <h2 id="about">ABOUT ME</h2></center>
+      <center> <h1 id="about">ABOUT ME</h1></center>
    <font face="Comic sans MS" size="4">
   
     <p1>
-        <p1>Samantha Calvert is a passionate researcher with a curious mindset. Having worked in both academia and government, she displays professionalism in her day-to-day life.
+        <p1>I am Samantha Calvert, a passionate researcher with a curious mindset. Having worked in both academia and government, she displays professionalism in her day-to-day life.
         <br> Some of her strongest skills are monitoring and evaluating projects, research, analysis, attention to detail, teamwork, relationship-building, report and research writing.
         <br> She would like to assist organizations to be successful and for its clients to be delighted with the service received as well as to establish long-standing partnerships.
         <br> She is currently pursuing data analysis to become more proficient with analysing data and information.</p1> 
@@ -51,17 +59,16 @@
     <br>
 
 <section>
-  <center> <h2 id="skill">SKILLS</h2></center>
+  <center> <h1 id="skill">SKILLS</h1></center>
 <font face="Comic sans MS" size="4">
   <p>Samantha has learnt through perseverance and faith that anything is possible. 
     Without a degree in technology, she has taken on the challenge to grow her tech skills to achieve her data science career.
     The following are her main areas of learning notwithstanding her interest in learning more technologies.</p>
   <br>
     <aside>
-      <p>The Epcot center is a theme park at Walt Disney World Resort featuring exciting attractions, 
-        international pavilions, award-winning fireworks and seasonal special events.</p>
-      </aside
-<h3><u>TECH STACK</u></h3>
+      <p>I have recently started my tech career. Through the organization, <a href="https://uvuafrica.com/capaciti/"><span class="Capaciti">CapaCiTi</span></a>, my knowledge base and interest for technology has grown tremendously.</p>
+    </aside>
+<h2><u>TECH STACK</u></h2>
 
 <table>
     <tr>
@@ -94,18 +101,73 @@
       <td>Basic</td>
       <td>Data Science</td>
     </tr>
+    <tr>
+      <td>Github</td>
+      <td>Basic</td>
+      <td>Project editing</td>
+    </tr>
+    <tr>
+      <td>Github</td>
+      <td>Basic</td>
+      <td>Project editing</td>
+    </tr>
+  </table>
+  <br>
+  <h2><u>ADDITIONAL SKILLS</u></h2>
+
+<table>
+    <tr>
+      <th>SKILL</th>
+      <th>PROFICIENCY</th>
+      <th>USED WHERE</th>
+    </tr>
+    <tr>
+      <td>HTML</td>
+      <td>Basic</td>
+      <td>Website & Portfolio Development</td>
+    </tr>
+    <tr>
+      <td>Python</td>
+      <td>Basic</td>
+      <td>Program applications</td>
+    </tr>
+    <tr>
+      <td>Java</td>
+      <td>Basic</td>
+      <td>Website & Portfolio Development</td>
+    </tr>
+    <tr>
+      <td>JavaScript</td>
+      <td>Basic</td>
+      <td>Website & Portfolio Development</td>
+    </tr>
+    <tr>
+      <td>SQL</td>
+      <td>Basic</td>
+      <td>Data Science</td>
+    </tr>
+    <tr>
+      <td>Github</td>
+      <td>Basic</td>
+      <td>Project editing</td>
+    </tr>
+    <tr>
+      <td>Github</td>
+      <td>Basic</td>
+      <td>Project editing</td>
+    </tr>
   </table>
 </section>
 
 <section>
-  <center> <h2 id="project">PROJECTS</h2></center>
+  <center> <h1 id="work">WORK EXPERIENCE</h1></center>
   <font face="Comic sans MS" size="4">
     <p>Peruse Samantha's projects below.</p>
 </section>
 
 <section>
   <div class="contact">
-  <center> <h2 id="contact">CONTACT INFORMATION</h2></center>
+  <center> <h1 id="contact">CONTACT</h1></center>
   </div>
    
 </section>
@@ -113,8 +175,8 @@
 
 <section>         
 <font face="Comic sans MS" size="4">
-<h3><i>Let's get in touch!</i></h3>
-
+<h4><h4>If you want to know more about me. <h3><span class="touch">Let's get in touch!</span></i></h4>
+<br>
 <div class="content-form">
   
   <form action="" method="post">
@@ -161,7 +223,7 @@
     <div class="footer-links"></div>
     <a href="https://www.linkedin.com/in/samanthaj-calvert/?originalSubdomain=za/" target="_blank"><img src="../images/Link" alt="LinkedIn icon" width="41px" height="51px"></a>
   <div>
-    <p>© 2024 Samantha The Software Developer & Data Scientist</p>
+    <p>2024 Samantha The Software Developer & Data Scientist</p>
   </div>
 </footer>
 
