--- a/website/Personal Portfolio.html
+++ b/website/Personal Portfolio.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samantha's Work Portfolio</title>
     <link rel="stylesheet" href="css stylesheet_ind.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ojuju:wght@200..800&display=swap" rel="stylesheet">
+
 </head>
    
  
@@ -15,22 +19,32 @@
 
         <div class="navbar">
         <ul>
-          <li><a href="#contact">CONTACT</a></li>
+        <li><a class="dropdown" href="#"><i class="fa fa-caret-down"></i>WORK EXPERIENCE</a>
+           <div class="dropdown-content">
+            <ul>
+              <li><a>Tech</a></li>
+              <li><a>Non-tech</a></li>
+            </ul>
+          </div>
+        </li>  
+        <li><a href="#contact">CONTACT</a></li>
           <li><a href="#skill">SKILLS</a></li>
-          <li><a href="#work">WORK EXPERIENCE</a></li>
+          
           <li><a href="#about">ABOUT ME</a></li>
           <li><a href="#home">HOME</a></li>
-          <li><a class="my-name">Samantha Calvert</a></li>
+          </ul><!--<li><a class="my-name">Samantha Calvert</a></li>-->
         </div> 
-        </ul>
+        
     </nav>
     <div id="home">
     </div>
    
     <section> 
-        <p><h3><em><b>!!Come and Check out Samantha Calvert's career journey!! I have a diverse skillset from working in different industries. Hopefully my portfolio will pinpoint my unique offering and convince you to welcome me to your team!! </em></b></h3></p>
+
+        <p><h3><em><b>I have a diverse skillset from working in different industries. Hopefully my portfolio will pinpoint my unique offering and convince you to welcome me to your team!! </em></b></h3></p>
    
         <div class="home-pic">
+          <p><h3><em><b>!!Come and Check out Samantha Calvert's career journey!!</em></b></h3></p>
       <img src="../images/book.avif" 
         alt="sam_pic" 
         width="600" height="370"
@@ -65,9 +79,11 @@
     Without a degree in technology, she has taken on the challenge to grow her tech skills to achieve her data science career.
     The following are her main areas of learning notwithstanding her interest in learning more technologies.</p>
   <br>
-    <aside>
+    <aside class="container">
       <p>I have recently started my tech career. Through the organization, <a href="https://uvuafrica.com/capaciti/"><span class="Capaciti">CapaCiTi</span></a>, my knowledge base and interest for technology has grown tremendously.</p>
-    </aside>
+
+
+    <div class="table"
 <h2><u>TECH STACK</u></h2>
 
 <table>
@@ -157,6 +173,8 @@
       <td>Project editing</td>
     </tr>
   </table>
+</div>
+</aside>
 </section>
 
 <section>
