--- a/website/Personal Portfolio.html
+++ b/website/Personal Portfolio.html
@@ -159,7 +159,8 @@
 <section>
   <center> <h1 id="work">WORK EXPERIENCE</h1></center>
   <font face="Comic sans MS" size="4">
-<p class="work"><b>Thesis editor | Freelance</b>
+<p class="work">
+  <b>Thesis editor | Freelance</b>
   <br>
   <i>January – June 2023</i>
   <br>
@@ -187,7 +188,7 @@
   • Produced feedback forms and handled correspondence. <br>
   • Assisted with the development and mitigation ofshock scenarios and existing stresses to Cape Town’s food
   system. <br>
-  • Performed ad hoc research to support stakeholder research and their projects. <br>
+  • Performed ad hoc research to support stakeholder research and their projects.<br>
   • Arranged transport to Site visits. <br>
   • Engaged with locals in different communities by identifying challenges to their livelihoods in order to
   improve their food systems. <br>
@@ -199,6 +200,7 @@
   - Excel database - Data was cleaned and studied for missing values, duplications, spelling and
   grammatical errors through the filter function and conditional formatting. 
   <br><br>
+
   <b><i>Research Administrative Assistant (Work-study) | University of the Western Cape, EMS - Institute for Social Development (ISD)</i></b>
   <br>
   <i></i>February 2018 – July 2019<i></i>
@@ -210,6 +212,7 @@
   • Amended and updated Research Agendas.<br>
   • Performed daily administrative functions.<br>
   • Set up venues for lectures and special events.<br><br>
+
   <b>Business Management Tutor | University of the Western Cape, EMS - School of Business &
   Finance (SBF)</b><br>
   <i>August 2016 – October 2016</i><br>
@@ -217,52 +220,70 @@
   • Facilitated conversations related to subject matter.<br>
   • Captured tutorial attendance and marked scripts.<br>
   • Arranged student consultations and provided motivation to complete course.<br><br>
+
   <b>Student Assistant | University of the Western Cape, EMS</b><br>
   <i>January 2016 – February 2016</i><br>
   • Informed students on application status.<br>
   • Advised students on module choices.<br>
   • Assisted with online registrations and telephonic queries.<br><br>
+  
   <b>Library Administrative Assistant (Work-study) | University of the Western Cape, School of
   Government (SOG)</b><br>
   <i>February 2015 – November 2015</i><br>
   • Provided post-graduate students with relevant research material for assignments and theses.<br>
   • Referred students to relevant main library section for more research materials.<br>
-  • Organized book cataloguing.</p><br><br>
+  • Organized book cataloguing.</p><br>
+</section>
   
-  <p><u>Peruse Samantha's projects below.</u></p>
+  <p class="peruse"><u><i>Peruse Samantha's projects below</u></i></p>
+  
+  
+  <section>
   <h2><u>Tech</u></h2>
 
-  <p>GirlCode Hackathon (October 2023): Gaming review app
-    - Created a low-no code Video Game review app for parents to make informed decisions when getting
-    a video game for their children.
-    GirlCode Bootcamp (August 2023): HTML & CSS Website
-    - Created my first career development webpages.
-    City of Cape Town (April 2021 – August 2022): Research Agenda Matrix
-    - Captured all food system research projects in the city and identified further research and data gaps for
-    government and partners in academia to investigate.
-    City of Cape Town (March 2021 – May 2021): Trauma-informed training project – Langa & Elsies River
-    community
-    - Served as a research assistant to the Policy and Strategy Research branch.
-    - Observed participant behaviours’ and interviewed 2 community leaders in Langa for the evaluation of
-    a trauma-informed training project.
-    City of Cape Town (September 2019 – October 2020): Food Systems Programme
-    - Developed a Food Systems Programme for Cape Town and established 30 broad food actions that the
-    City is currently emerged in or plan to embark on to improve the food system.
-    - Actions fell under specific themes such as food governance, food resilience, food production, food
-    environments, food & health and food economy.
-    University of the Western Cape (July 2018 – October 2018): Lavender Hill Project: Funding Proposal
-    - Identified social challenges and created a funding proposal for a hypothetical Non-Profit Organization
-    for projects on youth skills, leadership and development.
-    
-    CV of Samantha Calvert 2023 Page 4 of 4
-    University of the Western Cape (July 2017 – October 2017): Translator and Data Capturer
-    - Translated, captured and analyzed food insecurity of seasonal farm women survey responses on SPSS
-    to assist with the motivation of an adult seasonal social grant.
-    - Worked in a team to ensure data and responses were captured accurately.
-    - Liaised with colleague on data gaps and errors discovered during data collection.</p>
 
+  <p class="work">
+   <b> GirlCode Hackathon: Gaming review app</b></br>
+    <i>(October 2023)</i><br>
+    • Created a low-no code Video Game review app for parents to make informed decisions when getting
+    a video game for their children. <br><br>
+
+    <b>GirlCode Bootcamp: HTML & CSS Website</b><br>
+    <i>(August 2023)</i><br>
+    • Created my first career development webpages. <br><br>
+   </p>
+
+ 
   <h2><u>Non-Tech</u></h2>
-</section>
+  <p class="work">
+  <b>City of Cape Town: Research Agenda Matrix</b><br>
+    <i>(April 2021 – August 2022)</i><br>
+    • Captured all food system research projects in the city and identified further research and data gaps for
+    government and partners in academia to investigate.<br><br>
+    <b>City of Cape Town: Trauma-informed training project – Langa & Elsies River
+    community</b><br>
+    <i>(March 2021 – May 2021)</i><br>
+    • Served as a research assistant to the Policy and Strategy Research branch.<br>
+    • Observed participant behaviours’ and interviewed 2 community leaders in Langa for the evaluation of
+    a trauma-informed training project.<br><br>
+    <b>City of Cape Town : Food Systems Programme</b><br>
+    <i>(September 2019 – October 2020)</i><br>
+    • Developed a Food Systems Programme for Cape Town and established 30 broad food actions that the
+    City is currently emerged in or plan to embark on to improve the food system.<br>
+    • Actions fell under specific themes such as food governance, food resilience, food production, food
+    environments, food & health and food economy.<br><br>
+    <b>University of the Western Cape: Lavender Hill Project - Funding Proposal</b><br>
+    <i>(July 2018 – October 2018)</i><br>
+    • Identified social challenges and created a funding proposal for a hypothetical Non-Profit Organization
+    for projects on youth skills, leadership and development.<br><br>
+    <b>University of the Western Cape: Translator and Data Capturer</b><br>
+    <i>(July 2017 – October 2017)</i><br>
+    • Translated, captured and analyzed food insecurity of seasonal farm women survey responses on SPSS
+    to assist with the motivation of an adult seasonal social grant.<br>
+    • Worked in a team to ensure data and responses were captured accurately.<br>
+    • Liaised with colleague on data gaps and errors discovered during data collection.</p><br><br>
+
+  </section>
 
 <section>
   <div class="contact">
@@ -274,7 +295,10 @@
 
 <section>         
 <font face="Comic sans MS" size="4">
-<h4><h4>If you want to know more about me. <h3><span class="touch">Let's get in touch!</span></i></h4>
+<h4>If you want to know more about me.</i></h4>
+
+<span class="touch">Let's get in touch!</span>
+<br>
 <br>
 <div class="content-form">
   
@@ -320,7 +344,7 @@
     <a href="https://github.com/Samantha-June?tab=repositories" target="_blank">
     <img src="../images/git.jfif" alt="Github icon" width="40px" height="50px"></a>
     <div class="footer-links"></div>
-    <a href="https://www.linkedin.com/in/samanthaj-calvert/?originalSubdomain=za/" target="_blank"><img src="/images/linkedin.png" alt="LinkedIn icon" width="41px" height="51px"></a>
+    <a href="https://www.linkedin.com/in/samanthaj-calvert/?originalSubdomain=za/" target="_blank"><img src="../website/images/linkedin.png" alt="LinkedIn icon" width="41px" height="51px"></a>
   <div>
     <p>2024 Samantha The Software Developer & Data Scientist</p>
   </div>
