--- a/website/index.html
+++ b/website/index.html
@@ -295,7 +295,7 @@
 
 <section>         
 <font face="Comic sans MS" size="4">
-<h4>If you want to know more about me.</i></h4>
+<h4>If you want to know more about me. THOIS IS AESOME</i></h4>
 
 <span class="touch">Let's get in touch!</span>
 <br>
