--- a/website/index.html
+++ b/website/index.html
@@ -176,14 +176,14 @@
 
 <hr>
 
-  <h1>Work Experience</h1>
+<div class="skill"><h1>Work Experience</h1></div>
 
 <p class="work">
   <b>Thesis editor | Freelance</b>
   <br>
   <i>January – June 2023</i>
   <br>
-  • Edited a thesis and did bibliography checks.
+  Edited a thesis and did bibliography checks.
   <br><br>
   <b>Researcher (full-time) | City of Cape Town, Future Planning and Resilience Directorate, Resilience Department</b>
   <br>
@@ -191,117 +191,68 @@
   <br>
   <u>Strategy and implementation planning</u>
   <br>
-  • Engaged 15+ internal departments and 10+ external organizationsthrough data sharing and discussions on
-  improving societal challenges and established collaboration and partnerships.
-  <br>
-  • Drafted proposals, memos and reports. <br>
-  • Drafted minutes of meeting. <br>
-  • Captured food system research projects for Cape Town. <br>
-  • Communicated research to a Working group for feedback and knowledge sharing.  <br>
-  • Set up and participated in resilience workshops.  <br>
-  • Attended Women in Leadership (WIL) workshops advocating for the empowerment of women in the
-  workplace. <br>
-  • Created graphs to record flows, relationships and cases for intervention and mapped stakeholders. <br>
-  - Visualization tool used – Draw.io <br>
-  • Collated, updated and monitored 93 food-related projects as well as Cape Town’s Resilience Strategy. <br>
-  • Produced feedback forms and handled correspondence. <br>
-  • Assisted with the development and mitigation ofshock scenarios and existing stresses to Cape Town’s food
-  system. <br>
-  • Performed ad hoc research to support stakeholder research and their projects.<br>
-  • Arranged transport to Site visits. <br>
-  • Engaged with locals in different communities by identifying challenges to their livelihoods in order to
-  improve their food systems. <br>
-  • Provided input to policies and strategies. <br>
-  • Narrated City of Cape Town’s project contribution towards Sustainable Development Goal 2: Zero Hunger <br>
-  • Cleaned and organized databases – SharePoint and excel. <br>
-  - SharePoint and Google (cloud based) - Created folders, stored, edited and shared resources making it
-  easier for retrieval. <br>
-  - Excel database - Data was cleaned and studied for missing values, duplications, spelling and
-  grammatical errors through the filter function and conditional formatting. 
+  In her role, Samantha played a pivotal part in fostering collaboration and partnerships across 15+ internal departments and 10+ external organizations, facilitating data sharing and discussions aimed at addressing societal challenges. She adeptly drafted proposals, memos, and reports, and meticulously recorded meeting minutes. Samantha demonstrated a commitment to knowledge dissemination by communicating research findings to working groups and engaging in resilience workshops. She actively participated in workshops advocating for women's empowerment and utilized visualization tools like Draw.io to create informative graphs. Samantha diligently monitored and updated a multitude of food-related projects, contributing to Cape Town's Resilience Strategy, while also assisting in the development and mitigation of potential shocks to the food system. Her versatile skill set extended to ad hoc research, stakeholder engagement, policy input, and database management, exemplifying her dedication to advancing sustainable development goals and improving community livelihoods.
+
+
+
+
+
+
   <br><br>
 
   <b><i>Research Administrative Assistant (Work-study) | University of the Western Cape, EMS - Institute for Social Development (ISD)</i></b>
   <br>
   <i></i>February 2018 – July 2019<i></i>
   <br>
-  • Assisted post-graduate students with applications and registrations.<br>
-  • Compiled, updated, organized and filed thesis proposals and other documentation manually and
-  electronically.<br>
-  • Helped HOD and lecturers with CAM marks and analysis of student performance.<br>
-  • Amended and updated Research Agendas.<br>
-  • Performed daily administrative functions.<br>
-  • Set up venues for lectures and special events.<br><br>
+  
+In her role, Samantha provided comprehensive support to post-graduate students, aiding them with applications, registrations, and the compilation of thesis proposals and other documentation. She demonstrated meticulous organizational skills by managing both manual and electronic filing systems for academic materials. Additionally, Samantha assisted department heads and lecturers with the analysis of student performance, including the maintenance of CAM marks and the updating of Research Agendas. Her responsibilities extended to performing daily administrative tasks and coordinating venues for lectures and special events, showcasing her dedication to facilitating smooth academic operations and enhancing student experiences.
 
+
+
+
+
+<br><br>
   <b>Business Management Tutor | University of the Western Cape, EMS - School of Business &
   Finance (SBF)</b><br>
   <i>August 2016 – October 2016</i><br>
-  • Administered 15+ students’ subject material and presented instructions to class activities.<br>
-  • Facilitated conversations related to subject matter.<br>
-  • Captured tutorial attendance and marked scripts.<br>
-  • Arranged student consultations and provided motivation to complete course.<br><br>
+  In her role, Samantha took on a hands-on approach to academic support, overseeing the subject material for over 15 students and delivering clear instructions for class activities. She fostered engaging discussions on course content and diligently tracked tutorial attendance while grading scripts. Samantha also played a pivotal role in arranging student consultations, offering guidance, and motivating students to stay committed to their coursework, thus contributing to a positive and supportive learning environment.<br>
 
-  <b>Student Assistant | University of the Western Cape, EMS</b><br>
-  <i>January 2016 – February 2016</i><br>
-  • Informed students on application status.<br>
-  • Advised students on module choices.<br>
-  • Assisted with online registrations and telephonic queries.<br><br>
-  
-  <b>Library Administrative Assistant (Work-study) | University of the Western Cape, School of
-  Government (SOG)</b><br>
-  <i>February 2015 – November 2015</i><br>
-  • Provided post-graduate students with relevant research material for assignments and theses.<br>
-  • Referred students to relevant main library section for more research materials.<br>
-  • Organized book cataloguing.</p>
 
   <p class="peruse"><u><i>Peruse Samantha's projects below</u></i></p>
   
   <section id="tech">
-  <h2><u>Tech</u></h2>
 
 
-  <p class="work">
-   <b> GirlCode Hackathon: Gaming review app</b></br>
-    <i>(October 2023)</i><br>
-    • Created a low-no code Video Game review app for parents to make informed decisions when getting
-    a video game for their children. <br><br>
+<div class="project-container">
+  <div class="column">
+      <h2>Tech Projects</h2>
+      <div class="project">
+          <b>GirlCode Hackathon: Gaming review app</b> <br> (October 2023)<br>
+          Created a low-no code Video Game review app for parents to make informed decisions when getting a video game for their children.<br><br>
+          <b>GirlCode Bootcamp: HTML & CSS Website </b><br> (August 2023)<br>
+          Created my first career development webpages.
+      </div>
+  </div>
+  <div class="column">
+      <h2>Non-Tech Projects</h2>
+      <div class="project">
+          <b>City of Cape Town: Research Agenda Matrix</b> <br>(April 2021 – August 2022)<br>
+          Captured all food system research projects in the city and identified further research and data gaps for government and partners in academia to investigate.
+          <b>City of Cape Town: Trauma-informed training project – Langa & Elsies River community<br> (March 2021 – May 2021)<br>
+          Served as a research assistant to the Policy and Strategy Research branch. Observed participant behaviours’ and interviewed 2 community leaders in Langa for the evaluation of a trauma-informed training project.
+          City of Cape Town: Food Systems Programme (September 2019 – October 2020)</p>
+          Developed a Food Systems Programme for Cape Town and established 30 broad food actions that the City is currently emerged in or plan to embark on to improve the food system. Actions fell under specific themes such as food governance, food resilience, food production, food environments, food & health and food economy.
+          University of the Western Cape: Lavender Hill Project - Funding Proposal (July 2018 – October 2018)
+          Identified social challenges and created a funding proposal for a hypothetical Non-Profit Organization for projects on youth skills, leadership and development.
+          University of the Western Cape: Translator and Data Capturer (July 2017 – October 2017)
+          Translated, captured and analyzed food insecurity of seasonal farm women survey responses on SPSS to assist with the motivation of an adult seasonal social grant. Worked in a team to ensure data and responses were captured accurately. Liaised with colleague on data gaps and errors discovered during data collection.
+      </div>
+  </div>
+</div>
 
-    <b>GirlCode Bootcamp: HTML & CSS Website</b><br>
-    <i>(August 2023)</i><br>
-    • Created my first career development webpages.
- </section>
 
- <section id="non-tech">
-  <h2><u>Non-Tech</u></h2>
- </section>
- 
-  <p class="work">
-  <b>City of Cape Town: Research Agenda Matrix</b><br>
-    <i>(April 2021 – August 2022)</i><br>
-    • Captured all food system research projects in the city and identified further research and data gaps for
-    government and partners in academia to investigate.<br><br>
-    <b>City of Cape Town: Trauma-informed training project – Langa & Elsies River
-    community</b><br>
-    <i>(March 2021 – May 2021)</i><br>
-    • Served as a research assistant to the Policy and Strategy Research branch.<br>
-    • Observed participant behaviours’ and interviewed 2 community leaders in Langa for the evaluation of
-    a trauma-informed training project.<br><br>
-    <b>City of Cape Town : Food Systems Programme</b><br>
-    <i>(September 2019 – October 2020)</i><br>
-    • Developed a Food Systems Programme for Cape Town and established 30 broad food actions that the
-    City is currently emerged in or plan to embark on to improve the food system.<br>
-    • Actions fell under specific themes such as food governance, food resilience, food production, food
-    environments, food & health and food economy.<br><br>
-    <b>University of the Western Cape: Lavender Hill Project - Funding Proposal</b><br>
-    <i>(July 2018 – October 2018)</i><br>
-    • Identified social challenges and created a funding proposal for a hypothetical Non-Profit Organization
-    for projects on youth skills, leadership and development.<br><br>
-    <b>University of the Western Cape: Translator and Data Capturer</b><br>
-    <i>(July 2017 – October 2017)</i><br>
-    • Translated, captured and analyzed food insecurity of seasonal farm women survey responses on SPSS
-    to assist with the motivation of an adult seasonal social grant.<br>
-    • Worked in a team to ensure data and responses were captured accurately.<br>
-    • Liaised with colleague on data gaps and errors discovered during data collection.</p>
-<hr>
+
+
 <section>
   <div class="contact">
   <h1>CONTACT</h1>
