--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samantha's Work Portfolio</title>
-    <link rel="stylesheet" href="css stylesheet_ind.css">
+    <link rel="stylesheet" href="website/css stylesheet_ind.css">
 </head>
    
  
@@ -36,7 +36,7 @@
    
     <section> 
       <div class="home-pic">
-        <img src="/images/me.jpg" 
+        <img src="images/me.jpg" 
              alt="sam_pic" 
              width="270" height="300"
              srcset="/images/book.avif 2x,
@@ -238,7 +238,7 @@ In her role, Samantha provided comprehensive support to post-graduate students, 
       <div class="project">
           <b>City of Cape Town: Research Agenda Matrix</b> <br>(April 2021 – August 2022)<br>
           Captured all food system research projects in the city and identified further research and data gaps for government and partners in academia to investigate.
-          <b>City of Cape Town: Trauma-informed training project – Langa & Elsies River community<br> (March 2021 – May 2021)<br>
+          <b>City of Cape Town: Trauma-informed training project – Langa & Elsies River community</b><br> (March 2021 – May 2021)<br>
           Served as a research assistant to the Policy and Strategy Research branch. Observed participant behaviours’ and interviewed 2 community leaders in Langa for the evaluation of a trauma-informed training project.
           City of Cape Town: Food Systems Programme (September 2019 – October 2020)</p>
           Developed a Food Systems Programme for Cape Town and established 30 broad food actions that the City is currently emerged in or plan to embark on to improve the food system. Actions fell under specific themes such as food governance, food resilience, food production, food environments, food & health and food economy.
@@ -249,7 +249,7 @@ In her role, Samantha provided comprehensive support to post-graduate students, 
       </div>
   </div>
 </div>
-
+<hr>
 
 
 
@@ -311,18 +311,18 @@ In her role, Samantha provided comprehensive support to post-graduate students, 
 
 <footer>
   <div class="footer-links"></div>
-    <a href="mailto:samanthajune9.calvert@gmail.com" target="_blank"><img src="../images/email.jfif" alt="Email icon" width="40px" height="50px"></a>
+    <a href="mailto:samanthajune9.calvert@gmail.com" target="_blank"><img src="images/email.jfif" alt="Email icon" width="40px" height="50px"></a>
     <div class="footer-links"></div>
     <a href="https://github.com/Samantha-June?tab=repositories" target="_blank">
-    <img src="../images/git.jfif" alt="Github icon" width="40px" height="50px"></a>
+    <img src="images/git.jfif" alt="Github icon" width="40px" height="50px"></a>
     <div class="footer-links"></div>
-    <a href="https://www.linkedin.com/in/samanthaj-calvert/?originalSubdomain=za/" target="_blank"><img src="../website/images/linkedin.png" alt="LinkedIn icon" width="41px" height="51px"></a>
+    <a href="https://www.linkedin.com/in/samanthaj-calvert/?originalSubdomain=za/" target="_blank"><img src="website/images/linkedin.png" alt="LinkedIn icon" width="41px" height="51px"></a>
     <div>
     <p>2024 Samantha The Software Developer & Data Scientist</p>
   </div>
 </footer>
 
-<script src="newport.js"></script>
+<script src="website/newport.js"></script>
 </body>
 
 </html>
