--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <nav role="navigation" aria-label="main menu">
     <div class="navbar">
       <ul>
-        <li class="my-name">Samantha Calvert</li>
+        <!--<li class="my-name">Samantha Calvert</li>-->
         <li><a href="#contact">CONTACT</a></li>
         <li class="dropdown">
           <a href="#work">WORK EXPERIENCE</a>
@@ -237,15 +237,9 @@ In her role, Samantha provided comprehensive support to post-graduate students, 
       <h2>Non-Tech Projects</h2>
       <div class="project">
           <b>City of Cape Town: Research Agenda Matrix</b> <br>(April 2021 – August 2022)<br>
-          Captured all food system research projects in the city and identified further research and data gaps for government and partners in academia to investigate.
+          Captured all food system research projects in the city and identified further research and data gaps for government and partners in academia to investigate.<br><br>
           <b>City of Cape Town: Trauma-informed training project – Langa & Elsies River community</b><br> (March 2021 – May 2021)<br>
-          Served as a research assistant to the Policy and Strategy Research branch. Observed participant behaviours’ and interviewed 2 community leaders in Langa for the evaluation of a trauma-informed training project.
-          City of Cape Town: Food Systems Programme (September 2019 – October 2020)</p>
-          Developed a Food Systems Programme for Cape Town and established 30 broad food actions that the City is currently emerged in or plan to embark on to improve the food system. Actions fell under specific themes such as food governance, food resilience, food production, food environments, food & health and food economy.
-          University of the Western Cape: Lavender Hill Project - Funding Proposal (July 2018 – October 2018)
-          Identified social challenges and created a funding proposal for a hypothetical Non-Profit Organization for projects on youth skills, leadership and development.
-          University of the Western Cape: Translator and Data Capturer (July 2017 – October 2017)
-          Translated, captured and analyzed food insecurity of seasonal farm women survey responses on SPSS to assist with the motivation of an adult seasonal social grant. Worked in a team to ensure data and responses were captured accurately. Liaised with colleague on data gaps and errors discovered during data collection.
+          Served as a research assistant to the Policy and Strategy Research branch. Observed participant behaviours’ and interviewed 2 community leaders in Langa for the evaluation of a trauma-informed training project.<br><br>
       </div>
   </div>
 </div>
